--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
     align-items: center;
 }
 
+/*estilização do "buscar"*/
+
 .search-box {
     border-radius: 15px;
     background: var(--branco);
@@ -43,11 +45,13 @@
     width: 100px;
 }
 
-.search-txt {
+.search-txt { 
     border: none;
     outline: none;
     width: 500px;
 }
+
+/*estilização do "buscar"*/
 
 .cabecalho {
     background-color: var(--cor-secundaria);
