--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,18 @@
     display: flex;
     flex-direction: row-reverse;
     padding: 0.25rem 4rem;
+}
 
+.nav1 a{
+    color: var(--branco);
+}
+
+.cabecalho a{
+    color: var(--branco);
+}
+
+.nav2 a {
+    color: var(--cor-primaria);
 }
 
 .ponto {
@@ -75,7 +86,7 @@
 }
 
 .apresentacao {
-    margin: 4rem 20rem 2rem;
+    padding: 4rem 26rem 2rem;
 }
 
 .titulo1 {
@@ -87,7 +98,7 @@
 }
 
 .imagem {
-    padding: 1rem 20rem 3rem;
+    padding: 1rem 26rem 3rem;
     display: flex;
     gap: 2rem;
 }
@@ -103,7 +114,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   padding: 4rem 20rem;
+   padding: 4rem 26rem;
    gap: 3rem;
    text-align: center;
 
