--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,10 @@ h3 {
     margin-bottom: 35px;
 }
 
-.missao {
-}
+
 
 .cabecalho {
+    width: 100%;
     background-color: var(--cor-secundaria);
     padding: 1rem 4rem;
     display: flex;
@@ -163,6 +163,7 @@ h3 {
 /*Estilização do footer*/
 
 footer {
+    width: 100%;
     margin-top: 50px;
     background-color: var(--cor-quartenária);
     color: #fff;
