--- a/css/style.css
+++ b/css/style.css
@@ -77,14 +77,12 @@ h3 {
 }
 
 .divisao {
-    display: flex;
-    flex-direction: row;
-    gap: 70px;
     margin-top: 35px;
     margin-bottom: 35px;
 }
 
-
+.missao {
+}
 
 .cabecalho {
     width: 100%;
@@ -151,13 +149,12 @@ h3 {
 }
 
 .texto2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 4rem 26rem;
-    gap: 3rem;
+    padding: 4rem 22rem;
     text-align: center;
+}
 
+.p {
+    margin-bottom: 1rem;
 }
 
 /*Estilização do footer*/
