--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,36 @@ h3 {
     margin-bottom: 35px;
 }
 
-.missao {
+.missao,
+.visao,
+.valores {
+    margin-bottom: 2rem; /* Adiciona espaço entre as seções */
+    text-align: center;
+}
+
+.missao img,
+.visao img,
+.valores img {
+    margin-bottom: 1rem; /* Espaço entre a imagem e o texto */
+}
+
+.missao p,
+.visao p,
+.valores p,
+.valores details {
+    margin-top: 1rem; /* Espaço entre os parágrafos e os textos */
+}
+
+.valores details {
+    margin-left: 1rem; /* Adiciona espaço à esquerda das listas de valores */
+}
+
+.valores details summary {
+    margin-bottom: 0.5rem; /* Espaço entre os itens de resumo */
+}
+
+.valores details p {
+    margin-top: 0.5rem; /* Espaço entre o resumo e o parágrafo */
 }
 
 .cabecalho {
