--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ h2 {
     color: var(--cor-primaria);
 }
 
+.titulo-footer {
+    color: var(--branco);
+}
+
 .rodape {
     color: var(--cor-quinteária);
 }
