--- a/css/style.css
+++ b/css/style.css
@@ -58,18 +58,6 @@
     width: 35rem;
 }
 
-/* Menu hamburguer mobile */
-.mobile-menu div {
-    width: 32px;
-    height: 2px;
-    background: #fff;
-    margin: 8px;
-}
-
-.mobile-menu {
-    cursor: pointer;
-}
-
 /*Estilização do conteudo*/
 
 h2 {
@@ -289,12 +277,25 @@ footer {
     }
 }
 
-@media (max-width: 1360px) {
+@media screen and (max-width: 1360px) {
     /*header*/
     .cabecalho {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+    }
+
+    .icon-link {
+        position: absolute;
+        left: 20px;
+    }
+
+    .search-box {
+
+    }
+
+    .icones {
+        position: absolute;
     }
 
     .nav2 {
