--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,11 @@ h3 {
     font-size: 19px;
 }
 
-.p {
+.pergunta p {
+    background-color: var(--cor-terciaria);
+    color: var(--preto);
+    padding: 1.5rem;
+    border-radius: 0.5rem;
     margin-bottom: 1rem;
 }
 
